bans property name fixes/change, category -> type, type -> range, now they reflect more what they actually are bantable updated, bit cleaner mixin bantables now more compact, will overflow (with scroll) and no text wrap close #446

--- a/gulp/res/css/style.css
+++ b/gulp/res/css/style.css
@@ -1338,11 +1338,14 @@ hr + .thread {
 	margin-top: -5px;
 }
 
-.scrolltable {
-	max-height: 160px;
-	overflow-y: auto;
-	overflow-x: hidden;
-	border: 1px solid var(--box-border-color);
+.bantable {
+  max-width: unset;
+  word-break: keep-all;
+  white-space: nowrap;
+}
+
+.bantable td, .bantable th {
+	padding: 5px 10px;
 }
 
 tr:nth-child(odd) {
